--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body {
     display: block;
     align-items: center;
     text-align: center;
-    font-weight: 100;
+    font-weight: 70;
+    margin-top: 60px;
+    padding-top: 30px;
 
 }
 
@@ -33,7 +35,7 @@ body {
     content: "";
     position: absolute;
     width: 1px;
-    height: 80%;
+    height: 100%;
     border-right: 2px solid black;
     animation: blink 0.7s infinite ease;
     text-align: center;
@@ -50,4 +52,111 @@ body {
     }
 }
 
-/* Dynamic text ends here */
+/* Navigation and header */
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+
+}
+nav{
+    height: 60px;
+    width: 100%;
+    /* background: #34495e; */
+    background:#eaeaea;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+
+}
+label.logo{
+    font-size: 25px;
+    padding: 0 30px;
+    line-height: 60px;
+   
+}
+nav ul{
+    float: right;
+    margin-right: 40px;
+
+}
+nav li{
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 60px;
+
+}
+nav a{
+    color: rgb(14, 12, 12);
+    font-size: 16px;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
+}
+a.active, a:hover{
+    border: 1px solid white;
+    transition: .5s;
+}
+
+nav #icon{
+    color: #00535E;
+    font-size: 20px;
+    line-height: 60px;
+    float:right;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+
+@media (max-width: 1048px){
+    label.logo{
+        font-size: 23px;
+        padding-left: 20px;
+        
+    }
+    nav ul{
+        margin-right: 20px;
+    }
+    nav a{
+        font-size: 14px;
+        
+
+    }
+}
+@media (max-width:909px){
+
+    nav #icon{
+        display: block;
+    }
+    nav ul{
+        position: fixed;
+        width:100%;
+        height:100vh;
+        background: rgba(47, 54, 64, 0.95);
+        top: 60px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav li{
+        display: block;
+        margin: 50px 0;
+        line-height: 20px ;
+    }
+    nav a{
+        font-size: 18px;
+        color: #FEC02F;
+    }
+    a.active, a:hover{
+        border: none;
+        color: #3498db;
+    }
+    nav ul.show{
+        left: 0
+    }
+}
+
