--- a/style2.css
+++ b/style2.css
@@ -32,67 +32,20 @@ html, body{
 }
 
 
-
-.header{
-    background-color: #f4f9fa;
-
-    padding: 0px;
-
-}
-.main{
-    overflow: hidden;
-    padding: 2px;
-}
-
-.menu{
-    float: left;
-    width: 0%;   /*Change the width later*/
-    padding: 10px;
-    
-}
-.menu ul{
-    list-style-type: none;
-    padding: 0px 5px 0px 10px;
-    
-}
-.menu ul li{
-    border-bottom: 1px solid gray;
-    padding: 10px 10px 10px 0px;
-
-
-}
-.menu ul li a{
-    text-decoration: none;
-    color: green;
-}
-.menu ul li a:hover{
-    color: red;
-}
 .main-body{
     
     overflow: hidden;
     width: 100%;
-    padding: 8px;
+	padding-top: 5px;
+	margin-bottom: 10px;
     
 }
-.main-body .svgflip{
-    float: left;
-    width: 40%;
-    transform: scaleX(-1);
-}
 
-.main-body object{
-    float: right;
-    width: 40%;
-}
-.right-part{
-    overflow: hidden;
-    background-color: #f7e4ff;
+
+.main-body img{
     float: left;
-    width: 0%;
-    padding: 10px;
-    margin-top: 7px;
-    text-align: justify;
+    width: 50%;
+	padding: 5px;
 }
 
 /* ----------------------------------------- */
@@ -101,17 +54,44 @@ html, body{
     display: block;
     text-align: center;
 }
+.bottom{
+	align-items: center;
+	background-color: rgb(202, 215, 224);
+	padding: 20px;
+	
+}
+.bottom::after{
+	content: '';
+	display: table;
+	clear: both;
+}
+.bottom .column{
+	float: left;
+	width: 60%;
+	align-items: center;
+}
+.bottom #profile{
+	width: 40%;
+}
+.bottom #profile img{
+	border-radius: 50%;
+	width: 30%;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+}
+	
 
+.bottom #about{
+	text-align: center;
+	padding: 5px;
 
-
-
-/* footer{
-    display: grid;
-   
-    background-color: #0a2930c0;
-    width: 100%;
-    padding: 1px;
-    color: white; }*/
+}
+@media screen and (max-width: 900px) {
+	.bottom .column, .bottom #profile {
+	  width: 100%;
+	}
+  }
 
 footer a{
     text-decoration: none;
@@ -120,9 +100,9 @@ footer a{
 .nav-wrapper{
 	border-radius:5px 5px 0 0;
 	grid-area:nav-wrapper;
-	border-bottom: 1px solid var(--borderColor);
+	border-bottom: 2px solid var(--borderColor);
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	background-color: var(--mainColor);
 }
