--- a/myfolio/assets/css/style.css
+++ b/myfolio/assets/css/style.css
@@ -492,6 +492,80 @@ img{
     transform: rotate(-180deg);
 }
 
-/* ================  About ===================== */
-/* ================  About ===================== */
-/* ================  About ===================== */
+/* ================  Qualification ===================== */
+
+.qualification_tabs{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2);
+}
+
+.qualification_button{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    cursor: pointer;
+}
+
+.qualification_button:hover{
+    color: var(--first-color);
+}
+
+.qualification_icon{
+    font-size: 1.8rem;
+    margin-right: var(--mb-0-25);
+}
+
+
+.qualification_data{
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+}
+
+.qualification_title{
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+.qualification_subtitle{
+    font-size: var(--samll-font-size);
+    display: inline-block;
+    margin-bottom: var(--mb-1);
+}
+
+.qualification_calender{
+    font-size: var(--samll-font-size);
+    color: var(--text-color-light);
+}
+
+.qualification_circle{
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color: var(--first-color);
+    border-radius: 50%;
+}
+
+.qualification_line{
+    width: 1px;
+    height: 100%;
+    display: block;
+    background-color: var(--first-color);
+    transform: translate(6px, -7px);
+}
+
+
+/* ------Qualification Data content inactive: hidden---- */
+.qualification [data-content]{
+    display: none;
+}
+/* ------Qualification Data content active:shown---- */
+.qualification_active[data-content]{
+    display: block;
+}
+.qualification_button.qualification_active{
+    color: var(--first-color);
+}
+
+/* ================  Services ===================== */
+/* ================  Portfolio ===================== */
