--- a/myfolio/assets/css/style.css
+++ b/myfolio/assets/css/style.css
@@ -9,10 +9,13 @@
     --header-height: 3rem;
 
     /* ===========Colors========= */
+
     /* change favourite color */
-    --hue-color: 250; /*purple 250, green 142, blue 130, pink  340  */
+    --hue-color: 230; /*purple 250, green 142, blue 130, pink  340, orange 39  */
     /* color: hsl(60, 1%, 14%); */
     --brand-orange: hsl(39, 100%, 58%);
+    --brand-orange-light: hsl(39, 100%, 75%);
+
     /* HSL Color mode */
     /* --first-color: var(--brand-orange); */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -25,6 +28,13 @@
     --input-color: hsl(var(--hue-color), 70%, 96%);
     --body-color: hsl(var(--hue-color), 60%, 99%);
     --container-color: #FFF;
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+    --scroll-thumb-color: hsl(var(--hue-color), 60%, 80%);
+
+    /* -----------More Custom Color------------- */
+    --text-dark: rgb(20, 20, 20);
+    --text-dark-lighter: rgb(216, 214, 214);
+
 
     /* Fonts & Typography */
     --body-font: 'Poppins', sans-serif;
@@ -38,9 +48,11 @@
     --samll-font-size: .813rem;
     --smaller-font-size: .75rem;
 
+
     /* ===========Font Weights========= */
     --font-medium:500;
     --font-semi-bold:600;
+
 
     /* ===========Margin Bottom========= */
     /* .25rem = 4px, .5rem = 8px, .75rem = 12px.. */
@@ -75,9 +87,44 @@
     }
 }
 
+/* ================= Variables for Dark Theme ===================== */
 
+body.dark-theme{
+
+    /* HSL Color mode */
+
+    /* Recommended Dark theme surface color #121212 */
+    /* --first-color: var(--brand-orange); */
+    /* --brand-orange-light: hsl(39, 20%, 11%); */
+    --first-color-second: hsl(var(--hue-color), 30%, 8%);
+    --title-color: hsl(var(--hue-color), 8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+    --scroll-thumb-color: hsl(var(--hue-color), 60%, 36%);
+    /* --body-color: hsl(var(--hue-color), 28%, 12%); */
+    --body-color: #1e1e1e;
+    --container-color: hsl(var(--hue-color),29%, 16%);
+    /* --container-color: rgb(69, 69, 69); */
+
+}
 
 /* ================= Button Dark/light ===================== */
+
+.nav_btns{
+    display: flex;
+    align-items: center;
+}
+
+.change-theme{
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+}
+.change-theme:hover{
+    color: var(--first-color);
+}
 
 /* =====================BASE===================== */
 *{
@@ -249,10 +296,14 @@ img{
 }
 
 /* Active Link */
-
+.active-link{
+    color: var(--first-color);
+}
 
 /* Change background header */
-
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0,0,0,.15);
+}
 
 /* ================= Home ===================== */
 .home_container{
@@ -341,16 +392,17 @@ img{
     display: inline-block;
     background-color: var(--first-color);
     color: #FFF;
-    padding: 1rem;
+    padding: .75rem;
     border-radius: .5rem;
     font-weight: var(--font-medium);
 }
+
 
 .button:hover{
     background-color: var(--first-color-alt);
 }
 .button_icon{
-    font-size: 1.25rem;
+    font-size: 1rem;
     margin-left: var(--mb-0-5);
     transition: .3s;
 }
@@ -358,6 +410,22 @@ img{
 .button-flex{
     display: inline-flex;
     align-items: center;
+}
+
+
+.button-small{
+    padding: .75rem 1rem;
+}
+
+.button-link{
+    padding: 0;
+    background-color: transparent;
+    color: var(--first-color);
+}
+
+.button-link:hover{
+    color: var(--first-color-alt);
+    background-color: transparent;
 }
 
 /* ================  About ===================== */
@@ -477,6 +545,47 @@ img{
 .skills_react{
     width: 70%;
 }
+/* backend */
+.skills_django{
+    width: 25%;
+}
+.skills_mongo{
+    width: 2%;
+}
+.skills_node{
+    width: 15%;
+}
+.skills_sql{
+    width: 2%;
+}
+
+/* ui ux */
+.skills_figma{
+    width: 75%;
+}
+.skills_illustrator{
+    width: 60%;
+}
+.skills_canva{
+    width: 95%;
+}
+
+/* Photography */
+.skills_nature{
+    width: 55%;
+}
+.skills_street{
+    width: 80%;
+}
+.skills_portrait{
+    width: 90%;
+}
+.skills_event{
+    width: 87%;
+}
+
+
+
 
 /* Subskills closed */
 .skills_close .skills_list{
@@ -568,4 +677,211 @@ img{
 }
 
 /* ================  Services ===================== */
+
+.services_container{
+    gap: 1.5rem;
+    grid-template-columns: repeat(2,1fr);
+}
+
+.services_content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 3.5rem .5rem 1.25rem 1.5rem;
+    border-radius: .25rem;
+    box-shadow: 0 2px 4px rgba(0,0,0,.15);
+    transition: .3s;
+}
+
+.services_content:hover{
+    box-shadow: 0 4px 8px rgba(0,0,0,.15);
+}
+
+.services_icon{
+    display: block;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+}
+
+.services_title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
+}
+
+.services_button{
+    cursor: pointer;
+    font-size: var(--samll-font-size);
+}
+
+.services_button:hover .button_icon{
+    transform: translateX(.25rem);
+}
+
+.services_modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 0 1rem;
+    z-index: var(--z-modal);
+    opacity: 0%;         /* To controll visibiity */   
+    visibility: hidden;  /* To controll visibiity */
+    transition: .3s;
+}
+
+.services_modal-content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 1.5rem;
+    border-radius: .5rem;
+
+}
+
+.services_modal-services{
+    row-gap: 1rem;
+}
+.services_modal-service{
+    display: flex;
+}
+
+
+.services_modal-title{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1-5);
+}
+
+.services_modal-close{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    cursor: pointer;
+}
+
+.services_modal-icon{
+    color: var(--first-color);
+    margin-right: var(--mb-0-25);
+}
+
+/* -----------Active Modal ---------- */
+
+.active-modal{
+    opacity: 1;
+    visibility: visible;
+}
 /* ================  Portfolio ===================== */
+/* ================  Portfolio ===================== */
+
+
+
+/* ================  FOOTER ===================== */
+
+.footer{
+    padding-top: 2rem;
+}
+
+.footer_container{
+    row-gap: 3.5rem;
+}
+
+.footer_bg{
+    background-color: hsl(var(--hue-color),29%, 16%);
+    padding: 2rem 0 3rem;
+}
+
+.footer_title{
+    font-size: var(--h1-font-size);
+    margin-bottom: var(--mb-0-25);
+}
+
+.footer_subtitle{
+    font-size: var(--samll-font-size);
+}
+
+.footer_links{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+}
+
+.footer_link:hover{
+    color: var(--first-color-lighter);
+}
+
+.footer_social{
+    font-size: 1.25rem;
+    margin-right: var(--mb-1-5);
+}
+
+.footer_social:hover{
+    color: var(--first-color-lighter);
+}
+
+.footer_copy{
+    font-size: var(--smaller-font-size);
+    text-align: center;
+    color: var(--text-color-light);
+    /* color: var(--text-dark); */
+    margin-top: var(--mb-2);
+}
+
+
+.footer_title,
+.footer_subtitle,
+.footer_link,
+.footer_social{
+    color: #FFF;
+    /* color: var(--text-dark); */
+}
+
+
+/* ================  Scroll Up ===================== */
+
+.scroll_up{
+    position: fixed;
+    right: 1rem;
+    bottom: -4rem;  /* Controlls the visiblity of the scroll up button */
+    background-color: var(--first-color);
+    opacity: .8;
+    padding: 0 .25rem;
+    border-radius: .4rem;
+    z-index: var(--z-tooltip);
+    transition: .5s;
+}
+.scroll_up:hover{
+    color: var(--first-color-alt);
+}
+.scroll_up-icon{
+    font-size: 1rem;
+    color: #FFF;
+}
+
+/* ---------  Show Scroll ------------ */
+
+.show-scroll{
+    bottom: 3.75rem; /*Changing bottom to Show scroll */
+}
+
+
+/* ================  Scroll Bar ===================== */
+::-webkit-scrollbar{
+    width: .6rem;
+    background-color: var(--scroll-bar-color);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: var(--scroll-thumb-color);
+    border-radius: .5rem;
+}
+
+
+/* ================  Media Queries ===================== */
