--- a/myfolio/assets/css/style.css
+++ b/myfolio/assets/css/style.css
@@ -777,7 +777,38 @@ img{
     opacity: 1;
     visibility: visible;
 }
+
 /* ================  Portfolio ===================== */
+.portfolio_container{
+    overflow: initial;
+}
+
+.portfolio_content{
+    padding: 0 1.5rem;
+}
+
+.portfolio_img{
+    width: 265px;
+    border-radius: .5rem;
+    justify-self: center;
+}
+
+.porfolio_title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.porfolio_description{
+    margin-bottom: var(--mb-0-75);
+}
+
+.portfolio_button:hover .button_icon{
+    transform: translateX(.25rem);
+}
+
+
+
+
 /* ================  Portfolio ===================== */
 
 
